remove required in team model
