# internal/models/team.go
@@ -6,8 +6,8 @@ import (
 
 type Team struct {
 	ID            string    `json:"id,omitempty" bson:"_id,omitempty"`
-	NameEn        string    `bson:"name_en" json:"name_en" binding:"required"`
-	NameKr        string    `bson:"name_kr" json:"name_kr" binding:"required"`
+	NameEn        string    `bson:"name_en" json:"name_en"`
+	NameKr        string    `bson:"name_kr" json:"name_kr"`
 	DescriptionEn string    `bson:"description_en" json:"description_en,omitempty"`
 	DescriptionKr string    `bson:"description_kr" json:"description_kr,omitempty"`
 	LeaderId      string    `bson:"leader_id" json:"leader_id"`
@@ -22,8 +22,8 @@ type TeamShort struct {
 }
 
 type CreateTeam struct {
-	NameEn        string `bson:"name_en" json:"name_en" binding:"required"`
-	NameKr        string `bson:"name_kr" json:"name_kr" binding:"required"`
+	NameEn        string `bson:"name_en" json:"name_en"`
+	NameKr        string `bson:"name_kr" json:"name_kr"`
 	DescriptionEn string `bson:"description_en" json:"description_en,omitempty"`
 	DescriptionKr string `bson:"description_kr" json:"description_kr,omitempty"`
 	LeaderId      string `bson:"leader_id" json:"leader_id"`
@@ -31,8 +31,8 @@ type CreateTeam struct {
 
 type UpdateTeam struct {
 	ID            string `json:"id,omitempty" bson:"_id,omitempty"`
-	NameEn        string `bson:"name_en" json:"name_en" binding:"required"`
-	NameKr        string `bson:"name_kr" json:"name_kr" binding:"required"`
+	NameEn        string `bson:"name_en" json:"name_en"`
+	NameKr        string `bson:"name_kr" json:"name_kr"`
 	DescriptionEn string `bson:"description_en" json:"description_en,omitempty"`
 	DescriptionKr string `bson:"description_kr" json:"description_kr,omitempty"`
 	LeaderId      string `bson:"leader_id" json:"leader_id"`
